<resources>
    <string name="app_name">Event Master</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">Latest Events</string>
    <string name="title_home">Home</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notifications</string>
    <string name="title_subscriptions">My Subscriptions</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_register">Register</string>
    <string name="title_login">Log In</string>

    <string name="event_default_name">Defailt Event Name</string>
    <string name="event_default_desc">Defailt Event Desc</string>
    <string name="event_default_date">Defailt Event Time</string>
    <string name="button_create">Create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_name">Name</string>
    <string name="promt_password_confirm">Password Confirmation</string>
    <string name="action_register">Register</string>

    <string name="notification_channel">notification</string>
    <string name="notification_name">Notification Name</string>
    <string name="internal_storage">Internal storage</string>
    <string name="title_activity_maps">Map</string>

    <string name="header_my_events">My Events</string>
</resources>
